appId: host.exp.exponent
---
- tapOn:
    id: "email-input"
- eraseText
- inputText: ${USER_EMAIL}
- tapOn:
    id: "password-input"
- eraseText
- inputText: "12345678"
- hideKeyboard
- tapOn: "Entrar"

- extendedWaitUntil:
    visible: "O que você precisa hoje?"
    timeout: 10000

